# narad

./: .dockerignore  .env.example  .gitignore  .gitmodules  Anchor.toml  BUILD_COMMANDS.md  CMakeLists.txt  Cargo.toml  MAC.md  Makefile  README.md  TEST_REPORT.md  USAGE.md  ZKP_INTEGRATION_SUMMARY.md  ZKP_MATHEMATICAL_GUIDE.md  ZK_PROOF_TECHNICAL_GUIDE.md  build_all.sh  buildv2.md  context.txt  docker-compose.yml  narad_setup.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
aggregator/: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  aggregator.c  aggregator.h  bigint_ops.c  bigint_ops.h  binding.gyp  binding.md  main.c  package.json
aggregator/src/: api.ts  binding.cpp  ffi.ts  index.ts
backend/: BLOCKCHAIN_INTEGRATION.md  README.md  VOTER_ROUTES.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  voting_sys.json
backend/examples/: blockchain-example.js
backend/prisma/: schema.prisma
backend/prisma/migrations/20250208163934_authmanager/: migration.sql
backend/src/: index.js  index.ts  voting_sys.json
backend/src/middleware/: auth.ts
backend/src/routes/: aggregatorRoutes.ts  auth.ts  blockchainRoutes.ts  voterRoutes.ts
backend/src/scripts/: initDb.ts
backend/src/services/: aggregationService.ts  blockchainService.ts
backend/src/types/: voting_sys.ts
backtest/: .gitignore  README.md  package-lock.json  package.json  server.js
cmake/modules/: FindCURL.cmake  FindEmscripten.cmake  FindNodeJS.cmake
collector/: .env.example  CMakeLists.txt  Makefile  README.md  bigint_ops.c  bigint_ops.h  binding.gyp  collector.c  collector.h  http_client.c  http_client.h  json_utils.c  json_utils.h  main.c  package.json
collector/src/: api.ts  binding.cpp  index.ts
common/bigint_lib/: CMakeLists.txt  Makefile  bigint.c  bigint.h  libtommath_wrapper.h
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  portal.Dockerfile  solana-builder.Dockerfile  solana-wallet-entrypoint.sh  solana-wallet.Dockerfile  wasm-builder.Dockerfile
docs/paper/: paper.tex  paper.toc
docs/paper/figures/: system_overview.tex
frontend/: index.html  package.json  vite.config.ts
frontend/project/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/project/src/: App.tsx  index.css
frontend/project/src/api/: axios.ts
frontend/project/src/components/: Layout.tsx  ManagerLogin.tsx  Navbar.tsx  ProtectedRoute.tsx  VoterSignup.tsx
frontend/project/src/pages/: Login.tsx
frontend/project/src/pages/manager/: ManagerDashboard.tsx
frontend/project/src/pages/voter/: VoterDashboard.tsx
frontend/project/src/store/: index.ts
frontend/project/src/store/slices/: authSlice.ts  electionSlice.ts
frontend/project/src/types/: index.ts
frontend/public/assets/: encryption.js  encryption.wasm
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Auth.tsx  ClientVote.js  Election.tsx
frontend/src/wasm/: CMakeLists.txt  Makefile  README.md  bigint_ops.c  bigint_ops.h  crypto_voting.c  crypto_voting.h  encryption.js  encryption.wasm  main.c  vote_encrypt.c  vote_encrypt.h  wasmModule.ts
frontend/src/wasm/frontend/public/assets/: encryption.js  encryption.wasm
portal/: README.md  ZKP_IMPLEMENTATION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
portal/public/assets/: README.md  encryption.js  encryption.wasm
portal/src/: App.tsx  index.css  styles.css  wasmModule.ts
portal/src/components/: ErrorBoundary.tsx  ZKProofIndicator.tsx
portal/src/components/auth/: LoginForm.tsx  RegisterForm.tsx  SessionTimeoutWarning.tsx  index.ts
portal/src/components/layout/: Header.tsx  Layout.tsx
portal/src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  index.ts
portal/src/components/voting/: CandidateCard.tsx  ElectionIdInput.tsx  ElectionSelection.tsx  PublicVerificationDisplay.tsx  VoteConfirmation.tsx  VoteSuccessDisplay.tsx  index.ts
portal/src/contexts/: AuthContext.tsx
portal/src/examples/: verificationDemo.ts
portal/src/hooks/: index.ts  useAuth.ts  useVoting.ts  useWasm.ts  useZKProof.ts
portal/src/pages/: Dashboard.tsx  Help.tsx  Login.tsx  Logout.tsx  PublicVerification.tsx  Register.tsx  VerifyVote.tsx  Voting.tsx  index.ts
portal/src/pages/admin/: AdminPanel.tsx
portal/src/store/: authStore.ts  index.ts  votingStore.ts  votingStore.tsx
portal/src/types/: auth.ts  commitment.ts  index.ts  voting.ts  wasm.ts  zkProof.ts
portal/src/utils/: ZKP_IMPLEMENTATION_GUIDE.md  candidateGenerator.ts  commitmentScheme.ts  constants.ts  crypto.ts  cryptoUtils.ts  deterministicKeyGen.ts  index.ts  proofValidation.ts  rangeProof.ts  receipt.ts  securityChecks.ts  singleGenerationProof.ts  sumProof.ts  thirdPartyVerification.ts  validation.ts  zkProof.ts  zkProofApi.ts
programs/voting-sys/: Cargo.toml
programs/voting-sys/src/: lib.rs
test/: full_system_test.py
testing-2.0/: BLOCKCHAIN_INTEGRATION.md  README.md  package.json  test-blockchain.js  voting_sys.json
testing-2.0/prisma/: schema.prisma
testing-2.0/prisma/migrations/20250411073259_test001/: migration.sql
testing-2.0/prisma/migrations/20250411083958_test002/: migration.sql
testing-2.0/prisma/migrations/20250412153039_test003/: migration.sql
testing-2.0/prisma/migrations/20250414092858_test003/: migration.sql
testing-2.0/prisma/migrations/20250414094012_test004/: migration.sql
testing-2.0/prisma/migrations/20250415103232_init/: migration.sql
testing-2.0/prisma/migrations/20250620132918_zkproof/: migration.sql
testing-2.0/prisma/migrations/20250802200208_election_id_added/: migration.sql
testing-2.0/prisma/migrations/20250803111432_unique_on_electionid/: migration.sql
testing-2.0/src/: index.ts
testing-2.0/src/middleware/: auth.ts
testing-2.0/src/routes/: aggregatorRoutes.ts  blockchainRoutes.ts  collectorRoutes.ts  electionRoutes.ts  userRoutes.ts  voterRoutes.ts  zkProofRoutes.ts
testing-2.0/src/services/: blockchainService.ts
testing-2.0/src/types/: voting_sys.ts
tests/: voting-sys.ts
