[package]
name = "voting-sys"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting_sys"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = { version = "0.2", default-features = false }
anchor-lang = "0.30.1"
